AC_INIT(facitlist.c)
PRODUCT=facitlist
VERSION=1.0-SNAPSHOT
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

LDFLAGS="$LDFLAGS"
CFLAGS="$CFLAGS"
CPPFLAGS="$CPPFLAGS"

dnl Checks for programs.
AC_PROG_CC
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)
